# payment_installments

./: README.md  pyproject.toml
.github/workflows/: ci.yml
payment_installments/: hooks.py  modules.txt  tasks.py  utils.py
payment_installments/fixtures/: client_script.json  custom_field.json
payment_installments/payment_installments/doctype/installments/: installments.js  installments.json  installments.py  test_installments.py
